trunk/Archive2/26/7bf8f29cf7a0bf/output
main.cpp:9:3: error: static_assert failed "Invalid template argument specified!"
  static_assert( yearMin <= year && year <= yearMax,        // Condition
  ^              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:15:16: note: in instantiation of template class 'Model8556<1980>' requested here
template class Model8556<1980>; // Fails
               ^
1 error generated.
